[package]
name = "rpi_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
futures = "0.3.21"
signal-hook-async-std = "0.2.2"
signal-hook = "0.3.13"
bitflags = "1.3.2"
chrono = "0.4.19"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "chrono"]